# bootstrap-emilien

./: README.md  ansible.cfg  bootstrap.sh  bootstrap.yaml  groups  project.config  setup.cfg
rc-config/: gitconfig  vimrc  zshrc
tasks/: client.yml  main.yml  server.yml
templates/: custom-sudoers.conf.j2  gertty.yaml  gitconfig  pt.sh  redhat-token.service  terminator  tripleo-release.sh  zshrc
vars/: client.yml  main.yml  server.yaml  server.yml
