[metadata]
name = ansible-role-bootstrap-emilien
summary = ansible-role-bootstrap-emilien - An ansible role to bootstrap Emilien's environment on Fedora.
description-file =
    README.md
author = Emilien Macchi
author-email = emilien.macchi@gmail.com
home-page = https://github.com/EmilienM/bootstrap-emilien
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    /usr/share/ansible/roles/bootstrap-emilien/defaults = defaults/*
    /usr/share/ansible/roles/bootstrap-emilien/handlers = handlers/*
    /usr/share/ansible/roles/bootstrap-emilien/library = library/*
    /usr/share/ansible/roles/bootstrap-emilien/meta = meta/*
    /usr/share/ansible/roles/bootstrap-emilien/tasks = tasks/*
    /usr/share/ansible/roles/bootstrap-emilien/templates = templates/*
    /usr/share/ansible/roles/bootstrap-emilien/vars = vars/*
    /usr/share/ansible/roles/bootstrap-emilien/files = files/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
